--- a/index.html
+++ b/index.html
@@ -90,8 +90,15 @@
   <header>
     <h1>Bilal Ali</h1>
     <p>Student | Economics & AI Enthusiast</p>
-    <p>📍 Greater Noida, India | 📞 +91 9340848088 | ✉️ <a href="https://mail.google.com/mail/?view=cm&to=itsali.bilal@gmail.com" target="_blank">itsali.bilal@gmail.com</a></p>
-    <p><a href="https://www.linkedin.com/in/bilal-ali-jmi" target="_blank">LinkedIn</a></p>
+    <p>
+      📍 <a href="https://maps.google.com/?q=Greater+Noida+India" target="_blank">Greater Noida, India</a> | 
+      📞 <a href="tel:+919340848088" target="_blank">+91 9340848088</a> | 
+      ✉️ <a href="mailto:itsali.bilal@gmail.com" target="_blank">itsali.bilal@gmail.com</a>
+    </p>
+    <p>
+      <a href="https://www.linkedin.com/in/bilal-ali-jmi" target="_blank">🔗 LinkedIn</a> | 
+      <a href="https://github.com/Bilal0Ali" target="_blank">🐙 GitHub</a>
+    </p>
   </header>
   <section>
     <h2>Profile</h2>
