--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
       <div><strong>Languages:</strong> English (Fluent), Hindi (Fluent)</div>
       <div><strong>Hobbies:</strong> Chess, Music, Exploring AI</div>
     </div>
+        <a class="download-btn" href="https://drive.google.com/file/d/17qQrwJ9Funqzwcb3TgZvG-9MEeWdTfYG/view?usp=sharing" target="_blank">⬇️ Download Resume (PDF)</a>
   </section>
   <footer>
     &copy; 2025 Bilal Ali. Powered by ambition and caffeine.
