--- a/index.html
+++ b/index.html
@@ -77,6 +77,23 @@
       color: var(--mid-blue);
       margin-bottom: 0.8rem;
     }
+    .download-btn {
+      display: block;
+      width: fit-content;
+      margin: 2rem auto;
+      padding: 0.75rem 1.5rem;
+      background-color: var(--sky-blue);
+      color: var(--white);
+      font-weight: 600;
+      border: none;
+      border-radius: 8px;
+      text-align: center;
+      cursor: pointer;
+      text-decoration: none;
+    }
+    .download-btn:hover {
+      background-color: var(--mid-blue);
+    }
     footer {
       text-align: center;
       padding: 1rem;
