Update profile description in index.html

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   </header>
   <section>
     <h2>Profile</h2>
-    <p>With a strong foundation in Mathematics, Statistics, and Economics, I’m passionate about economic research—especially macroeconomic policy, development economics, and rational expectations theory—as well as AI model training and prompt engineering. I’m skilled in Excel, academic presentation, and AI tools.</p>
+    <p>I have a strong foundation in Mathematics, Statistics, and Economics, coupled with hands-on experience in Python, R, SQL, and AI/ML tools. I can apply data analysis and modeling skills to conduct in depth research and inform impactful economic decisions within an innovative organization.</p>
     <h2>Education</h2>
     <div>
       <div class="edu-title">M.A. in Economics <span style="float:right">2024–2026</span></div>
